syntax = "proto3";

package proto.zkpb;

option go_package = "AKFAK/proto/zkpb";

// Request.Broker refers to getting the brokers information from broker_config.json
message ServiceDiscoveryRequest {
    string query = 1;
    enum Request {
        BROKER = 0;
    }
    Request request = 2;
    Broker broker = 3;
}

message ServiceDiscoveryResponse {
    repeated Broker brokerList = 1;
}

message Broker {
    int32 id = 1;
    string host = 2;
    int32 port = 3;
    bool isCoordinator = 4;
}